--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        " '51': 'petunia'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,34 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sequential(\n",
-       "  (fc1): Linear(in_features=25088, out_features=4096, bias=True)\n",
-       "  (relu1): ReLU()\n",
-       "  (drop1): Dropout(p=0.5)\n",
-       "  (fc2): Linear(in_features=4096, out_features=4096, bias=True)\n",
-       "  (relu2): ReLU()\n",
-       "  (drop2): Dropout(p=0.5)\n",
-       "  (output): Linear(in_features=4096, out_features=1000, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Build and train your network\n",
     "\n",
-    "vgg16 = models.vgg16(pretrained=True)\n",
-    "\n",
-    "_models = {'vgg': vgg16 } \n",
+    "model_vgg16 = models.vgg16(pretrained=True)\n",
     "\n",
     "classifier = nn.Sequential(OrderedDict([\n",
     "                          ('fc1', nn.Linear(25088, 4096)),\n",
@@ -302,15 +281,14 @@
     "                          ('output', nn.Linear(4096, 102)),\n",
     "                          ]))\n",
     "\n",
-    "for mod in _models:\n",
-    "    \n",
-    "    #freeze params, avoid backprop\n",
-    "    for param in _models[mod].parameters():\n",
-    "        param.requires_grad = False\n",
-    "    \n",
-    "    #assign my classifier\n",
-    "    mod.classifier = classifier\n",
-    "        \n"
+    "\n",
+    "#freeze params, avoid backprop\n",
+    "for param in model_vgg16.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "#assign my classifier\n",
+    "model_vgg16.classifier = classifier\n",
+    "\n"
    ]
   },
   {
@@ -536,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
