--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -300,7 +300,46 @@
     "# Training\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.classifier.parameters(), lr=0.001)\n",
-    "\n"
+    "\n",
+    "def train(model, trainloader, testloader, criterion, optimizer, epochs=5, print_every=40):\n",
+    "    \n",
+    "    steps = 0\n",
+    "    running_loss = 0\n",
+    "    for e in range(epochs):\n",
+    "        # Model in training mode, dropout is on\n",
+    "        model.train()\n",
+    "        for images, labels in trainloader:\n",
+    "            steps += 1\n",
+    "            \n",
+    "            # Flatten images into a 784 long vector\n",
+    "            images.resize_(images.size()[0], 784)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            output = model.forward(images)\n",
+    "            loss = criterion(output, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "            if steps % print_every == 0:\n",
+    "                # Model in inference mode, dropout is off\n",
+    "                model.eval()\n",
+    "                \n",
+    "                # Turn off gradients for validation, will speed up inference\n",
+    "                with torch.no_grad():\n",
+    "                    test_loss, accuracy = validation(model, testloader, criterion)\n",
+    "                \n",
+    "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
+    "                      \"Training Loss: {:.3f}.. \".format(running_loss/print_every),\n",
+    "                      \"Test Loss: {:.3f}.. \".format(test_loss/len(testloader)),\n",
+    "                      \"Test Accuracy: {:.3f}\".format(accuracy/len(testloader)))\n",
+    "                \n",
+    "                running_loss = 0\n",
+    "                \n",
+    "                # Make sure dropout and grads are on for training\n",
+    "                model.train()\n"
    ]
   },
   {
@@ -514,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
